Fixed room_content overflow

--- a/css/room_details.css
+++ b/css/room_details.css
@@ -32,7 +32,7 @@
 }
 
 .room_info {
-  width: 100%;
+  width: calc(100% - 32px);
   margin: 16px;
 }
 
